<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_camera"
            android:title="@string/app_bar_flowers"
            android:onClick="GoToFlowers"/>
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/app_bar_casket"
            android:onClick="GoToCaskets" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/app_bar_venue"
            android:onClick="GoToVenue"/>
        <item
            android:id="@+id/nav_manage"
            android:title="@string/app_bar_mortician"
            android:onClick="GoToMortician"/>
    </group>
    <item android:title="@string/App_bar_title">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/second_group_app_bar" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/second_group_app_bar_documents" />
        </menu>
    </item>

</menu>
