<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mycompany.goodproject.Main24Activity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main24">

    <TextView
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rev_joe"
        android:textSize="30sp"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imam_matt"
        android:textSize="30sp"
        android:padding="35dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pas_gary"
        android:textSize="30sp"
        android:padding="35dp"/>

</LinearLayout>
